--- a/public/market/index.html
+++ b/public/market/index.html
@@ -1181,6 +1181,137 @@
         </div>
       </div> -->
     </div>
+    <footer class="footer">
+    <div class="content-grid">
+        <div class="footer_logo">
+            <a href="#"></a>
+        </div>
+        <div class="footer_inner-wrap">
+            <div class="footer_sitemap clearfix">
+                <div class="footer-col footer-col-1">
+                    <div class="footer-col_inner-wrap">
+                        <h2>Customer Services</h2>
+                        <ul>
+                            <li><a href="#">Help Center</a></li>
+                            <li><a href="#">Payment</a></li>
+                            <li><a href="#">How to Buy</a></li>
+                            <li><a href="#">Shipping & Delivery</a></li>
+                            <li><a href="#">How to Return</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-col footer-col-2">
+                    <div class="footer-col_inner-wrap">
+                        <h2>About Us</h2>
+                        <ul>
+                            <li><a href="#">Smart interdeal</a></li>
+                            <li><a href="#">SK M&S</a></li>
+                            <li><a href="#">Parteners</a></li>
+                            <li><a href="#">Site map</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-col footer-col-3">
+                    <div class="footer-col_inner-wrap">
+                        <h2>Buy on Smart interdeal</h2>
+                        <ul>
+                            <li><a href="#">All Categories</a></li>
+                            <li><a href="#">Request for Quotation</a></li>
+                            <li><a href="#">Wholesaler Market</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-col footer-col-4">
+                    <div class="footer-col_inner-wrap">
+                        <h2>Sell on Smart interdeal</h2>
+                        <ul>
+                            <li><a href="#">Supplier Memberships</a></li>
+                            <li><a href="#">Learning Center</a></li>
+                            <li><a href="#">Training Center</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-col footer-col-5 clearfix">
+                    <div class="footer-col_inner-wrap">
+                        <h2>Trade Services</h2>
+                        <ul>
+                            <li><a href="#">Trade Assurance</a></li>
+                            <li><a href="#">Business Identity</a></li>
+                            <li><a href="#">Logistics Service</a></li>
+                            <li><a href="#">Secure Payment</a></li>
+                            <li><a href="#">Inspection Service</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_sociality">
+                <div class="social-login">
+                    <span class="footer_sociality_title">Social</span>
+                    <ul>
+                        <li><a href="#" class=""></a></li>
+                        <li><a href="#" class=""></a></li>
+                    </ul>
+                </div>
+                <div class="download-app">
+                    <span class="footer_sociality_title">Download the App</span>
+                    <ul>
+                        <li><a href="#" class="bg-google_play"></a></li>
+                        <li><a href="#" class="bg-app_store"></a></li>
+                    </ul>
+                </div>
+                <div class="subscribe">
+                    <label for="" class="footer_sociality_title">Exclusive Deals and Offers <span>Subscribe and instantly get up to 10% off(capped at $5)</span></label>
+                    <div class="subscribe_form-wrap">
+                        <form class="" action="index.html" method="post">
+                            <input type="text" name="" value="" placeholder="Your Email Address">
+                            <button type="button" class="btn" name="button">sign me up</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_copyright-wrap">
+            <div class="company-intro">
+                <strong>Smartinterdeal.com Site:</strong>
+                <span>International · </span>
+                <span>International · </span>
+                <span>International · </span>
+                <span>International · </span>
+                <span>International · </span>
+                <span>International · </span>
+                <span>International · </span>
+                <span>International</span>
+            </div>
+            <div class="company-copyright">
+                <span>2017 37point. All rights reserved.</span>
+            </div>
+
+        </div>
+    </div>
+    <div class="payment-method">
+        <div class="content-grid">
+            <ul>
+                <li><img src="/_res/sid17/temp_lee/market_main/visa-logo.png" alt=""></li>
+                <li><img src="/_res/sid17/temp_lee/market_main/mastercard-logo.png" alt=""></li>
+                <li><img src="/_res/sid17/temp_lee/market_main/cod-logo.png" alt=""></li>
+                <li><img src="/_res/sid17/temp_lee/market_main/paypal-logo.png" alt=""></li>
+                <li><img src="/_res/sid17/temp_lee/market_main/american-express-logo.png" alt=""></li>
+                <li><img src="/_res/sid17/temp_lee/market_main/alipay-logo.png" alt=""></li>
+                <li><img src="/_res/sid17/temp_lee/market_main/singapore-post-logo.png" alt=""></li>
+                <li><img src="/_res/sid17/temp_lee/market_main/tqb-logo.png" alt=""></li>
+                <li><img src="/_res/sid17/temp_lee/market_main/ninja-logo.png" alt=""></li>
+                <li><img src="/_res/sid17/temp_lee/market_main/unknown-logo.png" alt=""></li>
+            </ul>
+        </div>
+
+    </div>
+
+</footer>
+
+
+
+
 
 
   </div>
