--- a/public/market/sign-in.html
+++ b/public/market/sign-in.html
@@ -13,158 +13,10 @@
 </head>
 
 <body>
-  <div class="page-sign-in">
-    <header class="header">
-      <div class="upnav">
-        <div class="content-grid clearfix">
-          <div class="upnav-left">
-            <div class="inner-wrap clearfix">
-              <div class="partner-logo">
-                <a href="#"></a>
-              </div>
-              <div class="contact-number">
-                <span>Call Us Now 0123-444-666</span>
-              </div>
-              <div class="language-option">
-                <!-- [추가작업] 나라옵션 가져오기 -->
-                <select class="" name="">
-                  <option value="">English</option>
-                  <option value=""></option>
-                  <option value=""></option>
-                  <option value=""></option>
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="upnav-right">
-            <div class="system">
-              <ul>
-                <li><a href="#">Login</a></li>
-                <li class="left-line"><a href="">Join</a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="nav-main">
-        <div class="content-grid">
-          <div class="nav-belt">
-            <div class="inner-wrap clearfix">
-              <div class="nav-belt-left">
-                <h1>
-                  <span class="screen-reader-text">Main Logo</span>
-                  <a href="#"></a>
-                </h1>
-              </div>
-              <div class="nav-search-wrap">
-                <div class="nav-search-main">
-                  <input type="text" class="nav-search-input" name="" value="">
-                </div>
-                <button type="button" class="btn nav-search-btn" name="button"><i class="fa fa-search" aria-hidden="true"></i></button>
-              </div>
-              <div class="nav-belt-right">
-                <div class="">
-                  <ul>
-                    <li>dddddddddd</li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="nav-shop">
-            <div class="inner-wrap clearfix">
-              <div class="nav-shop-left">
-                <ul>
-                  <li>
-                    <a href="#">Mobile <i class="fa fa-caret-down" aria-hidden="true"></i></a>
-                    <ul>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Computer <i class="fa fa-caret-down" aria-hidden="true"></i></a>
-                    <ul>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Electronics <i class="fa fa-caret-down" aria-hidden="true"></i></a>
-                    <ul>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Beauty <i class="fa fa-caret-down" aria-hidden="true"></i></a>
-                    <ul>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Baby <i class="fa fa-caret-down" aria-hidden="true"></i></a>
-                    <ul>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Etc <i class="fa fa-caret-down" aria-hidden="true"></i></a>
-                    <ul>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Menu <i class="fa fa-caret-down" aria-hidden="true"></i></a>
-                    <ul>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Menu <i class="fa fa-caret-down" aria-hidden="true"></i></a>
-                    <ul>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="#">Menu <i class="fa fa-caret-down" aria-hidden="true"></i></a>
-                    <ul>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-              <div class="nav-shop-right">
-                <ul>
-                  <li><a href="#">Our Services</a></li>
-                  <li class="left-line"><a href="#">Deal</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div class="mobile-sign-sign-in">
+    <div class="content-grid">
 
-    </header>
+    </div>
     <div class="main-content sign-in">
       <div class="content-grid">
         <div class="sign-in_form-wrap">
@@ -200,102 +52,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer">
-      <div class="content-grid">
-        <div class="footer-logo">
-          <a href="#"></a>
-        </div>
-        <div class="footer-sitemap clearfix">
-          <div class="footer-col footer-col-1">
-            <div class="inner-wrap">
-              <h2>Customer Services</h2>
-              <ul>
-                <li><a href="#">Help Center</a></li>
-                <li><a href="#">Payment</a></li>
-                <li><a href="#">How to Buy</a></li>
-                <li><a href="#">Shipping & Delivery</a></li>
-                <li><a href="#">How to Return</a></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="footer-col footer-col-2">
-            <div class="inner-wrap">
-              <h2>About Us</h2>
-              <ul>
-                <li><a href="#">Smart interdeal</a></li>
-                <li><a href="#">SK M&S</a></li>
-                <li><a href="#">Parteners</a></li>
-                <li><a href="#">Site map</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="footer-col footer-col-3">
-            <div class="inner-wrap">
-              <h2>Buy on Smart interdeal</h2>
-              <ul>
-                <li><a href="#">All Categories</a></li>
-                <li><a href="#">Request for Quotation</a></li>
-                <li><a href="#">Wholesaler Market</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="footer-col footer-col-4">
-            <div class="inner-wrap">
-              <h2>Sell on Smart interdeal</h2>
-              <ul>
-                <li><a href="#">Supplier Memberships</a></li>
-                <li><a href="#">Learning Center</a></li>
-                <li><a href="#">Training Center</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="footer-col footer-col-5 clearfix">
-            <div class="inner-wrap">
-              <h2>Trade Services</h2>
-              <ul>
-                <li><a href="#">Trade Assurance</a></li>
-                <li><a href="#">Business Identity</a></li>
-                <li><a href="#">Logistics Service</a></li>
-                <li><a href="#">Secure Payment</a></li>
-                <li><a href="#">Inspection Service</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="footer-sociality">
-          <div class="social-login">
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-          </div>
-          <div class="download-app">
 
-          </div>
-          <div class="subcribe">
-
-          </div>
-        </div>
-      </div>
-      <div class="payment-method">
-        <ul>
-          <li><img src="images/visa-logo.png" alt=""></li>
-          <li><img src="images/mastercard-logo.png" alt=""></li>
-          <li><img src="images/cod-logo.png" alt=""></li>
-          <li><img src="images/paypal-logo.png" alt=""></li>
-          <li><img src="images/american-express-logo.png" alt=""></li>
-          <li><img src="images/alipay-logo.png" alt=""></li>
-          <li><img src="images/singapore-post-logo.png" alt=""></li>
-          <li><img src="images/tqb-logo.png" alt=""></li>
-          <li><img src="images/ninja-logo.png" alt=""></li>
-          <li><img src="images/unknown-logo.png" alt=""></li>
-        </ul>
-      </div>
-
-    </footer>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
