--- a/public/transaction-document/invoice/invoice.html
+++ b/public/transaction-document/invoice/invoice.html
@@ -10,8 +10,106 @@
 </head>
 
 <body>
-  <div class="ddh_wrapper">
+  <div class="top-info">
+    <div class="date">
+      <strong>Date</strong>
+      <span></span>
+    </div>
+    <div class="page">
+      <strong>Page</strong>
+      <span class="current">1</span>/<span class="total">1</span>
+    </div>
+    <div class="logo-mark"><h1></h1></div>
+  </div>
+  <div class="main-content">
+    <h2 class="main-title">invoice</h2>
+    <div class="contact-point">
+      <div class="sender-wrap">
+        <span class="sender">Sender</span>
+        <div class="sender-contact">
+          <ul>
+            <li><strong>Agent Company</strong></li>
+            <li>(Zip:XXX-XXX) XF, XXXXX, XXX</li>
+            <li>XXXXX, XXXXX, Seoul, Korea</li>
+            <li>Seller</li>
+            <li><em>TEL</em><span>+XX-XX-XXXX-XXXX</span></li>
+            <li><em>FAX</em><span>+XX-XX-XXXX-XXXX</span></li>
+            <li><em>Email</em><span>seller@mail.com</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="receiver-wrap">
+        <span class="receiver">Receiver</span>
+        <div class="receiver-contact">
+          <ul>
+            <li><strong>SK m&service</strong></li>
+            <li>Jun Tower 385,Toegye-ro,</li>
+            <li>Jung-gu,Seoul, S.Korea</li>
+            <li>SmartinterDeal</li>
+            <li><em>Tel</em><span>+82-2-6100-1359</span></li>
+            <li><em>Fax</em><span>+82-2-6100-0114</span></li>
+            <li><em>Email</em><span>sales@sk.com</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="payment-detail">
+
+  </div>
+  <div class="invoice-table">
+    <table>
+      <thead>
+        <tr>
+          <th class="number">NO.</th>
+          <th class="description">Description</th>
+          <th class="price">Unit Price</th>
+          <th class="quantity">Quantity(Unit)</th>
+          <th class="total">Total</th>
+        </tr>
+      </thead>
+      <tbody>
+
+      </tbody>
+      <tfoot>
+        <tr>
+          <td >Sub Total</td>
+          <td >2</td>
+          <td class="clearfix" ><span class="fl">$</span><span class="fr">2,000.00</span></td>
+        </tr>
+        <tr>
+          <td >VAT</td>
+          <td >10%</td>
+          <td class="clearfix" ><span class="fl">$</span><span class="fr">200.00</span></td>
+        </tr>
+        <tr>
+          <td >Total</td>
+          <td ></td>
+          <td class="clearfix" ><span class="fl">$</span><span class="fr">2,200.00</span></td>
+        </tr>
+      </tfoot>
+
+    </table>
+  </div>
+  <div class="bottom-info">
+    <div class="sk-logo"></div>
+    <div class="sid-logo"></div>
+    <div class="company-address">
+      <span>SK m&service</span>
+      <span>Jun Tower 385,Toegye-ro,Jung-gu,Seoul, S.Korea</span>
+    </div>
+    <div class="contact-info">
+      <ul>
+        <li><em>Tel</em><span>+82-2-6100-1359</span></li>
+        <li><em>Fax</em><span>+82-2-6100-0114</span></li>
+        <li><em>Email</em><span>sales@sk.com</span></li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- <div class="ddh_wrapper">
     <div class="invoice">
+
       <h1 class="ddh_head_title">INVOICE</h1>
       <div class="ddh_contact-point clearfix">
         <span class="date">2017-XX-XX</span>
@@ -54,19 +152,17 @@
               <tr>
                 <th class="number">NO.</th>
                 <th class="description">Description</th>
-                <th class="quantity">Quantity</th>
                 <th class="price">Unit Price</th>
+                <th class="quantity">Quantity(Unit)</th>
                 <th class="total">Total</th>
-                <th class="remark">Remark</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>1</td>
                 <td>Commission for Deal No. xxxxxxx</td>
-                <td>1</td>
                 <td><span class="fl">$</span><span class="fr">1,000.00</span></td>
-                <td> $ 1,000.00</td>
+                <td>100</td>
                 <td></td>
               </tr>
               <tr>
@@ -137,7 +233,7 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
 </body>
 
 </html>
