transaction document modified

--- a/public/mailing/product-ad.html
+++ b/public/mailing/product-ad.html
@@ -35,8 +35,8 @@
               </h1>
               <div class="gnb">
                 <ul>
-                  <li><a href="#" class="mysid-link"></a></li>
-                  <li><a href="#" class="categories-link"></a></li>
+                  <li><a href="#" class="mysid-link"><span class="icon"></span><span>MY SID</span></a></li>
+                  <li><a href="#" class="category-link"><span class="icon"></span><span>CATEGORIES</span></a></li>
                 </ul>
               </div>
             </div>
@@ -152,6 +152,9 @@
               Please note that product prices and availability are subject to change. Prices and availability were accurate at the time this newsletter was sent; however, they may differ from those you see when you visit Smartinterdeal.com
             </p>
             <p>This is an automatic email sent by system. Please do not reply as any emails sent to this email address will not get a reply.</p>
+          </div>
+          <div class="copyright">
+            Copyright Notice &copy; 2016-2017 Smartinterdeal.com All rights reserved.
           </div>
         </div>
       </div>
