--- a/public/transaction-document/packing-list-form/packing-list-form.html
+++ b/public/transaction-document/packing-list-form/packing-list-form.html
@@ -12,127 +12,160 @@
 <body>
   <div class="ddh_wrapper">
     <div class="packing-list-form">
-      <h1 class="ddh_head_title">PACKING LIST</h1>
-      <div class="ddh_invoice_form">
-        <div class="invoice-top clearfix">
-          <div class="invoice-top-left fl">
-            <div class="shipper border">
-              <h2>1) SHIPPER /EXPORTER</h2>
-              <div class="inner-wrap">
-                <ul>
-                  <li><em>Seller Company</em></li>
-                  <li><em>(Zip:XXX-XXX) XF, XXXXX, XXX </em></li>
-                  <li><em>XXXXX, XXXXX, Seoul, Korea </em></li>
-                  <li><em>Seller</em></li>
-                  <li><em>TEL +XX-XX-XXXX-XXXX, FAX +XX-XX-XXXX-XXXX</em></li>
-                </ul>
-              </div>
-            </div>
-            <div class="for-account border">
-              <h2>2) FOR ACCOUNT & RISK OF MESSERS</h2>
-              <div class="inner-wrap">
-                <ul>
-                  <li><em>SK TELECOM Co., LTD.</em></li>
-                  <li><em>65, Euljiro, Jung-gu,</em></li>
-                  <li><em>SEOUL, KOREA 100-999</em></li>
-                  <li><em>Smart[InterDeal]</em></li>
-                  <li><em>Tel +82-2-6100-1359, Fax +82-2-6100-0114</em></li>
-                </ul>
-              </div>
-            </div>
-            <div class="notify-party border">
-              <h2>3) NOTIFY PARTY</h2>
-            </div>
-            <div class="inner-wrap clearfix">
-              <div class="port-of-loading fl">
-                <h2>4) PORT OF LOADING</h2>
-              </div>
-              <div class="final-destination fl">
-                <h2>5) FINAL DESTINATION</h2>
-              </div>
-            </div>
-
-          </div>
-          <div class="invoice-top-right fl">
-            <div class="invoice-no border">
-              <h2>6) INVOICE NO. & DATE</h2>
-              <div class="inner-wrap clearfix">
-                <span class="fl"><em>XXXXXXX-XXXXX</em></span>
-                <span class="fr"><em>XXXX-XX-XX</em></span>
-              </div>
-            </div>
-            <div class="lc-no border">
-              <h2>7) L/C NO. & DATE</h2>
-            </div>
-            <div class="fill-out border">
-              <h2>8)</h2>
-              <span>* 필요 기입 사항 작성</span>
-            </div>
-            <div class="inner-wrap">
-              <div class="carrier fl">
-                <h2>9) CARRIER</h2>
-              </div>
-              <div class="sailing-on fl">
-                <h2>10) SAILING ON/ABOUT</h2>
-              </div>
-            </div>
-
-          </div>
+      <div class="top-info">
+        <div class="date">
+          <strong>Date</strong>
+          <span>2017-07-21</span>
         </div>
-
-        <div class="invoice-bottom">
-          <div class="ddh_table_common ddh_table_invoice_form">
+        <div class="page">
+          <strong>Page</strong>
+          <span>1</span>/<span>1</span>
+        </div>
+        <div class="logo-mark"><h1></h1></div>
+      </div>
+      <div class="main-content">
+        <h2 class="main-title">DELIVERY NOTE</h2>
+        <div class="">
+          <div class="">
+            <table>
+              <tr>
+                <td colspan="2">
+                  <strong>1. SENDER </strong>
+                  <ul>
+                    <li><span>Seller Company</span></li>
+                    <li><span>(Zip:XXX-XXX) XF, XXXXX, XXXXXXXX, XXXXX, Seoul, Korea
+                    Seller</span></li>
+                    <li><span>Tel:</span> <span>+XX-XX-XXXX-XXXX</span></li>
+                    <li><span>Fax:</span> <span>+XX-XX-XXXX-XXXX</span></li>
+                  </ul>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="2">
+                  <strong>2.  FOR ACCOUNT & RISK OF MESSRS </strong>
+                  <ul>
+                    <li><span>SK TELECOM Co., LTD.</span></li>
+                    <li><span>65, Euljiro, Jung-gu, SEOUL, KOREA 100-999
+                    Smart[InterDeal]</span></li>
+                    <li><span>Tel:</span> <span>+82-2-6100-1359</span></li>
+                    <li><span>Fax:</span> <span>+82-2-6100-0114</span></li>
+                  </ul>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="2">
+                  <strong>3. NOTIFY PARTY</strong>
+                  <span>SAME AS ABOVE</span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>4. PORT OF LOADING</strong>
+                  <span>INCHEON, KOREA</span>
+                </td>
+                <td>
+                  <strong>5. FINAL DESTINATION</strong>
+                  <span>JAPAN</span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <strong>6. CARRIER</strong>
+                  <span>Korea marine transportco</span>
+                </td>
+                <td>
+                  <strong> 7. SAILING ON/ABOUT</strong>
+                </td>
+              </tr>
+            </table>
+            <table>
+              <tr>
+                <td colspan="2">
+                  <strong>8. B/L NO. & DATE</strong>
+                  <span>SK20170712-001</span>
+                  <span>2017-07-21</span>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="2">
+                  <strong>9.TRACKING NO.</strong>
+                  <span>OT17KR-0904-NK12</span>
+                </td>
+                <td colspan="2">
+                  <strong>10. REMARKS</strong>
+                  <ul>
+                    <li><span>CIF</span></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </td>
+              </tr>
+            </table>
+          </div>
+          <div class="">
             <table>
               <thead>
                 <tr>
-                  <th class="description">11) DESCRIPTION OF GOODS</th>
-                  <th class="quantity">13) QUANTITY</th>
-                  <th class="carton">14) CARTON NO.</th>
-                  <th class="net-weight">15) NET WEIGHT</th>
-                  <th class="gweight">16) G/WEIGHT</th>
+                  <th>11.DESCRIPTION OF GOODS</th>
+                  <th>12.CODE</th>
+                  <th>13.Q’TY(UNIT)</th>
+                  <th>14.C/NO</th>
+                  <th>15.N/W(KGS)</th>
+                  <th>16.G/W(KGS)</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
+                  <td>1 Index Gear Box</td>
+                  <td>AB8465689</td>
                   <td>1</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td><span>KG</span></td>
+                  <td>1</td>
+                  <td>10.00</td>
+                  <td>100.00</td>
                 </tr>
                 <tr>
+                  <td>2 Product2</td>
+                  <td>AB8465689</td>
+                  <td>1</td>
                   <td>2</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>10.00</td>
+                  <td>100.00</td>
                 </tr>
                 <tr>
+                  <td>3 Product3</td>
+                  <td>AB8465689</td>
+                  <td>1</td>
                   <td>3</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>10.00</td>
+                  <td>100.00</td>
                 </tr>
                 <tr>
+                  <td>4 Product4</td>
+                  <td>AB8465689</td>
+                  <td>1</td>
                   <td>4</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>10.00</td>
+                  <td>100.00</td>
                 </tr>
               </tbody>
-              <tfoot>
-                <tr>
-                  <td colspan="2">TOTAL:</td>
-                  <td colspan="3"></td>
-                </tr>
-              </tfoot>
             </table>
           </div>
-          <div class="ddh_signature-wrap_v2">
-            <h2>16) SIGNED BY</h2>
-          </div>
+        </div>
+
+      </div>
+      <div class="bottom-info">
+        <div class="sk-logo"></div>
+        <div class="sid-logo"></div>
+        <div class="company-address">
+          <span>SK m&service</span>
+          <span>Jun Tower 385,Toegye-ro,Jung-gu,Seoul, S.Korea</span>
+        </div>
+        <div class="contact-info">
+          <ul>
+            <li><em>Tel</em><span>+82-2-6100-1359</span></li>
+            <li><em>Fax</em><span>+82-2-6100-0114</span></li>
+            <li><em>Email</em><span>sales@sk.com</span></li>
+          </ul>
         </div>
       </div>
     </div>
