--- a/public/transaction-document/proforma-invoice/proforma-invoice.html
+++ b/public/transaction-document/proforma-invoice/proforma-invoice.html
@@ -12,6 +12,192 @@
 <body>
   <div class="ddh_wrapper">
     <div class="proforma-invoice">
+      <div class="top-info">
+        <div class="date">
+          <strong>Date</strong>
+          <span></span>
+        </div>
+        <div class="page">
+          <strong>Page</strong>
+          <span>1</span>/<span>1</span>
+        </div>
+        <div class="logo-mark"><h1></h1></div>
+      </div>
+      <div class="main-content">
+        <h2 class="main-title">PURCHASING ORDER</h2>
+        <div class="contact-point">
+          <div class="sender-wrap">
+            <strong class="sender">Sender</strong>
+            <div class="sender-contact">
+              <ul>
+                <li>Agent Company</li>
+                <li>(Zip:XXX-XXX) XF, XXXXX, XXX</li>
+                <li>XXXXX, XXXXX, Seoul, Korea</li>
+                <li>Seller</li>
+                <li><em>TEL</em><span>+XX-XX-XXXX-XXXX</span></li>
+                <li><em>FAX</em><span>+XX-XX-XXXX-XXXX</span></li>
+                <li><em>Email</em><span>seller@mail.com</span></li>
+              </ul>
+            </div>
+          </div>
+          <div class="receiver-wrap">
+            <strong class="receiver">Receiver</strong>
+            <div class="receiver-contact">
+              <ul>
+                <li>SK m&service</li>
+                <li>Jun Tower 385,Toegye-ro,</li>
+                <li>Jung-gu,Seoul, S.Korea</li>
+                <li>SmartinterDeal</li>
+                <li><em>Tel</em><span>+82-2-6100-1359</span></li>
+                <li><em>Fax</em><span>+82-2-6100-0114</span></li>
+                <li><em>Email</em><span>sales@sk.com</span></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="terms">
+          <div class="terms-wrap">
+            <strong></strong>
+            <div class="terms_left">
+              <table>
+                <tr>
+                  <th>Item</th>
+                  <td>Description</td>
+                </tr>
+                <tr>
+                  <th>Payment</th>
+                  <td>100% T/T in advance</td>
+                </tr>
+                <tr>
+                  <th>Delivery Terms</th>
+                  <td>FOB UK or NJ</td>
+                </tr>
+                <tr>
+                  <th>Destination</th>
+                  <td>UK or USA</td>
+                </tr>
+                <tr>
+                  <th>Delivery Date</th>
+                  <td></td>
+                </tr>
+
+              </table>
+            </div>
+            <div class="terms_right">
+              <table>
+                <tr>
+                  <th>Conditions</th>
+                  <td>Expiration Term : Over One Year</td>
+                </tr>
+                <tr>
+                  <th>Partial shipment</th>
+                  <td>Not allowed</td>
+                </tr>
+                <tr>
+                  <th>Bank Account</th>
+                  <td>
+                    <ul>
+                      <li>XXXXXXXXXXXXX</li>
+                      <li><span>Address :</span> <span>xxxxxxxxxxxxxxxxxx</span></li>
+                      <li><span>Account # :</span> <span>xxxxxxxxxxxxxx</span></li>
+                      <li><span>Name of Account :</span> <span>Seller Compnay</span></li>
+                      <li><span>SWIFT Address :</span> <span>xxxxxxxxxxxxxx</span></li>
+                      <li><span>Currency :</span> <span>USD</span></li>
+                    </ul>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+
+        </div>
+        <div class="invoice-table">
+          <table>
+            <thead>
+              <tr>
+                <th class="number">NO.</th>
+                <th class="description">Description</th>
+                <th class="price">Unit Price</th>
+                <th class="quantity">Quantity(Unit)</th>
+                <th class="total">Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Product1</td>
+                <td>$ <span>10.00</span></td>
+                <td>100</td>
+                <td>$ <span>1000.00</span></td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Product2</td>
+                <td>$ <span>10.00</span></td>
+                <td>100</td>
+                <td>$ <span>1000.00</span></td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Product3</td>
+                <td>$ <span>10.00</span></td>
+                <td>100</td>
+                <td>$ <span>1000.00</span></td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Product4</td>
+                <td>$ <span>10.00</span></td>
+                <td>100</td>
+                <td>$ <span>1000.00</span></td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>Product5</td>
+                <td>$ <span>10.00</span></td>
+                <td>100</td>
+                <td>$ <span>1000.00</span></td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>Product6</td>
+                <td>$ <span>10.00</span></td>
+                <td>100</td>
+                <td>$ <span>1000.00</span></td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="2"></td>
+                <td >Total</td>
+                <td >600</td>
+                <td><span>$</span><span>6000.00</span></td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+        
+      </div>
+      <div class="bottom-info">
+        <div class="sk-logo"></div>
+        <div class="sid-logo"></div>
+        <div class="company-address">
+          <span>SK m&service</span>
+          <span>Jun Tower 385,Toegye-ro,Jung-gu,Seoul, S.Korea</span>
+        </div>
+        <div class="contact-info">
+          <ul>
+            <li><em>Tel</em><span>+82-2-6100-1359</span></li>
+            <li><em>Fax</em><span>+82-2-6100-0114</span></li>
+            <li><em>Email</em><span>sales@sk.com</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="ddh_wrapper">
+    <div class="proforma-invoice">
       <h1 class="ddh_head_title">PROFORMA INVOICE</h1>
       <div class="ddh_contact-point clearfix">
         <span class="date">2017-XX-XX</span>
@@ -185,7 +371,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </body>
 
 </html>
