--- a/public/transaction-document/delivery-note-form/delivery-note-form.html
+++ b/public/transaction-document/delivery-note-form/delivery-note-form.html
@@ -12,8 +12,8 @@
 <body>
   <div class="ddh_wrapper">
     <div class="delivery-note-form">
-      <h1 class="ddh_head_title">DELIVERY NOTE</h1>
-      <div class="ddh_invoice_form">
+
+      <!-- <div class="ddh_invoice_form">
         <div class="invoice-top clearfix">
           <div class="invoice-top-left fl">
             <div class="sender border">
@@ -137,6 +137,162 @@
           </div>
         </div>
 
+      </div> -->
+      <div class="top-info">
+        <div class="date">
+          <strong>Date</strong>
+          <span>2017-07-21</span>
+        </div>
+        <div class="page">
+          <strong>Page</strong>
+          <span>1</span>/<span>1</span>
+        </div>
+        <div class="logo-mark"><h1></h1></div>
+      </div>
+      <div class="main-content">
+        <h2 class="main-title">DELIVERY NOTE</h2>
+
+        <table>
+          <tr>
+            <td colspan="2">
+              <strong>1. SENDER </strong>
+              <ul>
+                <li><span>Seller Company</span></li>
+                <li><span>(Zip:XXX-XXX) XF, XXXXX, XXXXXXXX, XXXXX, Seoul, Korea
+                Seller</span></li>
+                <li><span>Tel:</span> <span>+XX-XX-XXXX-XXXX</span></li>
+                <li><span>Fax:</span> <span>+XX-XX-XXXX-XXXX</span></li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2">
+              <strong>2.  FOR ACCOUNT & RISK OF MESSRS </strong>
+              <ul>
+                <li><span>SK TELECOM Co., LTD.</span></li>
+                <li><span>65, Euljiro, Jung-gu, SEOUL, KOREA 100-999
+                Smart[InterDeal]</span></li>
+                <li><span>Tel:</span> <span>+82-2-6100-1359</span></li>
+                <li><span>Fax:</span> <span>+82-2-6100-0114</span></li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2">
+              <strong>3. NOTIFY PARTY</strong>
+              <span>SAME AS ABOVE</span>
+
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <strong>4. PORT OF LOADING</strong>
+              <span>INCHEON, KOREA</span>
+
+
+            </td>
+            <td>
+              <strong>5. FINAL DESTINATION</strong>
+              <span>JAPAN</span>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <strong>6. CARRIER</strong>
+              <span>Korea marine transportco</span>
+            </td>
+            <td>
+              <strong> 7. SAILING ON/ABOUT</strong>
+            </td>
+          </tr>
+        </table>
+        <table>
+          <tr>
+            <td colspan="2">
+              <strong>8. B/L NO. & DATE</strong>
+              <span>SK20170712-001</span>
+              <span>2017-07-21</span>
+
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2">
+              <strong>9.TRACKING NO.</strong>
+              <span>OT17KR-0904-NK12</span>
+            </td>
+            <td colspan="2">
+              <strong>10. REMARKS</strong>
+              <ul>
+                <li><span>CIF</span></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </td>
+
+
+          </tr>
+        </table>
+        <table>
+          <thead>
+            <tr>
+              <th>11.DESCRIPTION OF GOODS</th>
+              <th>12.CODE</th>
+              <th>13.Q’TY(UNIT)</th>
+              <th>14.C/NO</th>
+              <th>15.N/W(KGS)</th>
+              <th>16.G/W(KGS)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1 Index Gear Box</td>
+              <td>AB8465689</td>
+              <td>1</td>
+              <td>1</td>
+              <td>10.00</td>
+              <td>100.00</td>
+            </tr>
+            <tr>
+              <td>2 Product2</td>
+              <td>AB8465689</td>
+              <td>1</td>
+              <td>2</td>
+              <td>10.00</td>
+              <td>100.00</td>
+            </tr>
+            <tr>
+              <td>3 Product3</td>
+              <td>AB8465689</td>
+              <td>1</td>
+              <td>3</td>
+              <td>10.00</td>
+              <td>100.00</td>
+            </tr>
+            <tr>
+              <td>4 Product4</td>
+              <td>AB8465689</td>
+              <td>1</td>
+              <td>4</td>
+              <td>10.00</td>
+              <td>100.00</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="bottom-info">
+        <div class="sk-logo"></div>
+        <div class="sid-logo"></div>
+        <div class="company-address">
+          <span>SK m&service</span>
+          <span>Jun Tower 385,Toegye-ro,Jung-gu,Seoul, S.Korea</span>
+        </div>
+        <div class="contact-info">
+          <ul>
+            <li><em>Tel</em><span>+82-2-6100-1359</span></li>
+            <li><em>Fax</em><span>+82-2-6100-0114</span></li>
+            <li><em>Email</em><span>sales@sk.com</span></li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
