--- a/public/transaction-document/invoice/invoice.html
+++ b/public/transaction-document/invoice/invoice.html
@@ -10,143 +10,87 @@
 </head>
 
 <body>
-  <div class="top-info">
-    <div class="date">
-      <strong>Date</strong>
-      <span></span>
-    </div>
-    <div class="page">
-      <strong>Page</strong>
-      <span class="current">1</span>/<span class="total">1</span>
-    </div>
-    <div class="logo-mark"><h1></h1></div>
-  </div>
-  <div class="main-content">
-    <h2 class="main-title">invoice</h2>
-    <div class="contact-point">
-      <div class="sender-wrap">
-        <span class="sender">Sender</span>
-        <div class="sender-contact">
-          <ul>
-            <li><strong>Agent Company</strong></li>
-            <li>(Zip:XXX-XXX) XF, XXXXX, XXX</li>
-            <li>XXXXX, XXXXX, Seoul, Korea</li>
-            <li>Seller</li>
-            <li><em>TEL</em><span>+XX-XX-XXXX-XXXX</span></li>
-            <li><em>FAX</em><span>+XX-XX-XXXX-XXXX</span></li>
-            <li><em>Email</em><span>seller@mail.com</span></li>
-          </ul>
-        </div>
-      </div>
-      <div class="receiver-wrap">
-        <span class="receiver">Receiver</span>
-        <div class="receiver-contact">
-          <ul>
-            <li><strong>SK m&service</strong></li>
-            <li>Jun Tower 385,Toegye-ro,</li>
-            <li>Jung-gu,Seoul, S.Korea</li>
-            <li>SmartinterDeal</li>
-            <li><em>Tel</em><span>+82-2-6100-1359</span></li>
-            <li><em>Fax</em><span>+82-2-6100-0114</span></li>
-            <li><em>Email</em><span>sales@sk.com</span></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="payment-detail">
-
-  </div>
-  <div class="invoice-table">
-    <table>
-      <thead>
-        <tr>
-          <th class="number">NO.</th>
-          <th class="description">Description</th>
-          <th class="price">Unit Price</th>
-          <th class="quantity">Quantity(Unit)</th>
-          <th class="total">Total</th>
-        </tr>
-      </thead>
-      <tbody>
-
-      </tbody>
-      <tfoot>
-        <tr>
-          <td >Sub Total</td>
-          <td >2</td>
-          <td class="clearfix" ><span class="fl">$</span><span class="fr">2,000.00</span></td>
-        </tr>
-        <tr>
-          <td >VAT</td>
-          <td >10%</td>
-          <td class="clearfix" ><span class="fl">$</span><span class="fr">200.00</span></td>
-        </tr>
-        <tr>
-          <td >Total</td>
-          <td ></td>
-          <td class="clearfix" ><span class="fl">$</span><span class="fr">2,200.00</span></td>
-        </tr>
-      </tfoot>
-
-    </table>
-  </div>
-  <div class="bottom-info">
-    <div class="sk-logo"></div>
-    <div class="sid-logo"></div>
-    <div class="company-address">
-      <span>SK m&service</span>
-      <span>Jun Tower 385,Toegye-ro,Jung-gu,Seoul, S.Korea</span>
-    </div>
-    <div class="contact-info">
-      <ul>
-        <li><em>Tel</em><span>+82-2-6100-1359</span></li>
-        <li><em>Fax</em><span>+82-2-6100-0114</span></li>
-        <li><em>Email</em><span>sales@sk.com</span></li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- <div class="ddh_wrapper">
+  <div class="ddh_wrapper">
     <div class="invoice">
-
-      <h1 class="ddh_head_title">INVOICE</h1>
-      <div class="ddh_contact-point clearfix">
-        <span class="date">2017-XX-XX</span>
-        <div class="sender-wrap">
-          <div class="inner-wrap">
-            <span class="ddh_sender">Sender :</span>
-            <div class="ddh_sender-contact-point">
-              <ul>
-                <li><strong>Agent Company</strong></li>
-                <li><span>(Zip:XXX-XXX) XF, XXXXX, XXX </span></li>
-                <li><span>XXXXX, XXXXX, Seoul, Korea </span></li>
-                <li><em>Agent</em></li>
-                <li><em>TEL +XX-XX-XXXX-XXXX, FAX +XX-XX-XXXX-XXXX</em></li>
-                <li><em>eMail: : seller@mail.com</em></li>
-              </ul>
-            </div>
-          </div>
+      <div class="top-info">
+        <div class="date">
+          <strong>Date</strong>
+          <span>2017-07-21</span>
         </div>
-        <div class="receiver-wrap">
-          <div class="inner-wrap">
-            <span class="ddh_receiver">Receiver :</span>
-            <div class="ddh_receiver-contact-point">
-              <ul>
-                <li><strong>SK TELECOM Co., LTD.</strong></li>
-                <li><span>65, Euljiro, Jung-gu,</span></li>
-                <li><span>SEOUL, KOREA 100-999</span></li>
-                <li><em>Smart[InterDeal]</em></li>
-                <li><em>Tel +82-2-6100-1359, Fax +82-2-6100-0114</em></li>
-                <li><em>eMail: sales@sk.com</em></li>
-              </ul>
-            </div>
-          </div>
-
+        <div class="page">
+          <strong>Page</strong>
+          <span>1</span>/<span>1</span>
         </div>
+        <div class="logo-mark"><h1></h1></div>
       </div>
-      <div class="invoice-table">
-        <div class="ddh_table_common ddh_table_invoice_original">
+      <div class="main-content">
+        <h2 class="main-title">invoice</h2>
+        <div class="contact-point">
+          <div class="sender-wrap">
+            <strong class="sender">Sender</strong>
+            <div class="sender-contact">
+              <ul>
+                <li>Agent Company</li>
+                <li>(Zip:XXX-XXX) XF, XXXXX, XXX</li>
+                <li>XXXXX, XXXXX, Seoul, Korea</li>
+                <li>Seller</li>
+                <li><em>TEL</em><span>+XX-XX-XXXX-XXXX</span></li>
+                <li><em>FAX</em><span>+XX-XX-XXXX-XXXX</span></li>
+                <li><em>Email</em><span>seller@mail.com</span></li>
+              </ul>
+            </div>
+          </div>
+          <div class="receiver-wrap">
+            <strong class="receiver">Receiver</strong>
+            <div class="receiver-contact">
+              <ul>
+                <li>SK m&service</li>
+                <li>Jun Tower 385,Toegye-ro,</li>
+                <li>Jung-gu,Seoul, S.Korea</li>
+                <li>SmartinterDeal</li>
+                <li><em>Tel</em><span>+82-2-6100-1359</span></li>
+                <li><em>Fax</em><span>+82-2-6100-0114</span></li>
+                <li><em>Email</em><span>sales@sk.com</span></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="payment-detail">
+          <strong>[Payment Detail]</strong>
+          <div class="pd_wrap">
+            <div class="pd_left">
+              <table>
+                <tr>
+                  <th>Item</th>
+                  <td>Description</td>
+                </tr>
+                <tr>
+                  <th>Payment</th>
+                  <td>100% T/T in advance</td>
+                </tr>
+              </table>
+            </div>
+            <div class="pd_right">
+              <table>
+                <tr>
+                  <th class="account">Bank Account</th>
+                  <td>
+                    <ul>
+                      <li>XXXXXXXXXXXXX</li>
+                      <li><span>Address :</span> <span>xxxxxxxxxxxxxxxxxx</span></li>
+                      <li><span>Account # :</span> <span>xxxxxxxxxxxxxx</span></li>
+                      <li><span>Name of Account :</span> <span>Seller Compnay</span></li>
+                      <li><span>SWIFT Address :</span> <span>xxxxxxxxxxxxxx</span></li>
+                      <li><span>Currency :</span> <span>USD</span></li>
+                    </ul>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+
+        </div>
+        <div class="invoice-table">
           <table>
             <thead>
               <tr>
@@ -160,80 +104,82 @@
             <tbody>
               <tr>
                 <td>1</td>
-                <td>Commission for Deal No. xxxxxxx</td>
-                <td><span class="fl">$</span><span class="fr">1,000.00</span></td>
+                <td>Commission for Deal No.xxxxxx</td>
+                <td>$ 1,000.00</td>
                 <td>100</td>
-                <td></td>
+                <td>$ 100,000.00</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td>Commission for Deal No. xxxxxxx</td>
-                <td>1</td>
-                <td><span class="fl">$</span><span class="fr">1,000.00</span></td>
-                <td> $ 1,000.00</td>
-                <td></td>
+                <td>Commission for Deal No.xxxxxx</td>
+                <td>$ 1,000.00</td>
+                <td>100</td>
+                <td>$ 100,000.00</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Commission for Deal No.xxxxxx</td>
+                <td>$ 1,000.00</td>
+                <td>100</td>
+                <td>$ 100,000.00</td>
               </tr>
             </tbody>
             <tfoot>
               <tr>
-                <td colspan="2">Sub Total</td>
-                <td colspan="2">2</td>
-                <td class="clearfix" colspan="2"><span class="fl">$</span><span class="fr">2,000.00</span></td>
-              </tr>
-              <tr>
-                <td colspan="2">VAT</td>
-                <td colspan="2">10%</td>
-                <td class="clearfix" colspan="2"><span class="fl">$</span><span class="fr">200.00</span></td>
-              </tr>
-              <tr>
-                <td colspan="2">Total</td>
                 <td colspan="2"></td>
-                <td class="clearfix" colspan="2"><span class="fl">$</span><span class="fr">2,200.00</span></td>
+                <td >Sub Total</td>
+                <td >2100</td>
+                <td><span>$</span> <span>2100,000.00</span></td>
+              </tr>
+              <tr>
+                <td colspan="2"></td>
+                <td >VAT</td>
+                <td >10%</td>
+                <td><span>$</span> <span>210,000.00</span></td>
+              </tr>
+              <tr>
+                <td colspan="2"></td>
+                <td >Total</td>
+                <td ></td>
+                <td><span>$</span> <span>2,200.00</span></td>
               </tr>
             </tfoot>
+
           </table>
         </div>
-      </div>
-      <div class="payment-detail">
-        <span>*Payment Detail</span>
-        <div class="ddh_table_common ddh_table_invoice_payment">
-          <table>
-            <tr>
-              <th>ITEM</th>
-              <td>Description</td>
-            </tr>
-            <tr>
-              <th>Payment</th>
-              <td>100% T/T in advance</td>
-            </tr>
-            <tr>
-              <th>Bank Information	</th>
-              <td>* Agent Bank Account 자동 생성</td>
-            </tr>
-          </table>
-        </div>
-      </div>
-      <div class="ddh_signature-wrap clearfix">
-        <div class="inner-wrap">
-          <div class="request">
-            <span>Looking forward to your valued inspection for the above request</span>
-            <span>yours faithfully,</span>
-          </div>
-          <div class="signed-by clearfix">
-            <strong>SIGNED BY</strong>
-          </div>
-          <div class="seller-signature clearfix">
-            <div class="inner-wrap">
-              <strong><span>Agent</span></strong>
-              <span>(Print Name / Authorized Signature)</span>
+        <div class="signature-wrap">
+          <div class="signature">
+            <div class="sign">
+
             </div>
-
+            <div class="signer-wrap">
+              <span>Signed by</span>
+              <span>Ricky Hong</span>
+            </div>
           </div>
         </div>
       </div>
-
+      <div class="bottom-info">
+        <div class="sk-logo"></div>
+        <div class="sid-logo"></div>
+        <div class="company-address">
+          <span>SK m&service</span>
+          <span>Jun Tower 385,Toegye-ro,Jung-gu,Seoul, S.Korea</span>
+        </div>
+        <div class="contact-info">
+          <ul>
+            <li><em>Tel</em><span>+82-2-6100-1359</span></li>
+            <li><em>Fax</em><span>+82-2-6100-0114</span></li>
+            <li><em>Email</em><span>sales@sk.com</span></li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </div> -->
+  </div>
+
+
+
+
 </body>
 
 </html>
